--- a/New folder/vercel.json
+++ b/New folder/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "famTonum.py",
+      "src": "test.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "famTonum.py"
+      "dest": "test.py"
     }
   ]
 }
